cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__namespaced-issue.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(NAMESPACED_QUERY).variables(json!({ \"id\" : \"3\" })).await"
---
data:
  gothub:
    pullRequestOrIssue:
      __typename: GothubIssue
      title: Everythings fucked
      author:
        __typename: GothubUser
        email: pessimist@example.com

