cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__namespaced-null.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(NAMESPACED_QUERY).variables(json!({ \"id\" : \"4\" })).await"
---
data:
  gothub:
    serverVersion: "1"
    pullRequestOrIssue: ~

