cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__unnamespaced-issue.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(UNNAMESPACED_QUERY).variables(json!({ \"id\" : \"3\" })).await"
---
data:
  serverVersion: "1"
  pullRequestOrIssue:
    __typename: Issue
    title: Everythings fucked
    author:
      __typename: User
      email: pessimist@example.com

