cli/crates/cli/tests/graphql-directive/snapshots/graphql_directive__unnamespaced-null.snap
---
source: crates/cli/tests/graphql-directive/main.rs
expression: "client.gql::<Value>(UNNAMESPACED_QUERY).variables(json!({ \"id\" : \"4\" })).await"
---
data:
  serverVersion: "1"
  pullRequestOrIssue: ~

